Fix P0-P2 audit findings: wire skills, add tests, security & refactoring
P0: Wire jms-messaging.md and gc-performance.md into select_skills() maps
P1: Add tests for estimate_tokens/heuristics, update docs, fix Gemini usage tracking
P2: AST-based signature extraction, new secret patterns (AWS/Basic/PEM),
    shared app_constants.py, error scenario tests, fix truncation order

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>